# opensis

./: .envrc  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  pyproject.toml
.cargo/: config.toml
.github/actions/nix/: action.yml
.github/workflows/: pipeline.yml
src/: devices.rs  lib.rs  python_binding.rs  recorder.rs
src/devices/: device.rs  transport.rs
src/devices/transport/: ssh.rs
src/recorder/: controller.rs  protocol.rs
src/recorder/protocol/: instructions.rs  payload_helpers.rs  states.rs
src/recorder/protocol/instructions/: commands.rs  query.rs  register.rs
tests/: real_ssh.rs
