[package]
name = "opensis"
version = "0.1.0"
edition = "2024"

[lib]
# `cdylib` for the Python extension module, `rlib` so the crate stays usable as
# a normal Rust dependency and the test/integration binaries can link it.
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
# control = "1.0.0"
dashmap = "6.2.1"
# protocol = "3.4.0"
pyo3 = { version = "0.29.0", optional = true, features = ["extension-module"] }
russh = { version = "0.54", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
toml = "0.8"
winnow = "1.0.3"

[features]
# The blocking Python facade. It drives real hardware, so it pulls in `ssh`.
python = ["dep:pyo3", "ssh"]
# Real SSH transport (russh). Heavy native dep, so the pure layers and
# `cargo test` stay light unless this is enabled.
ssh = ["dep:russh", "tokio/net", "tokio/io-util", "tokio/rt-multi-thread"]
# Exposes FakeTransport (and other test doubles) to out-of-crate integration tests.
testing = []
